yaml_dir/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-cursoJS
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-cursoJS
  template:
    metadata:
      labels:
        app: backend-cursoJS
    spec:
      containers:
      - name: backend-cursoJS
        image: 868477837551.dkr.ecr.us-east-1.amazonaws.com/nodeiot/cursojs:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: registry-images
