yaml_dir/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cursoJS
  namespace: development
  labels:
    app: backend-cursojs
    app.kubernetes.io/name: backend-cursojs
    app.kubernetes.io/instance: backend-cursojs
    app.kubernetes.io/version: latest
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: cursojs
spec:
  selector:
    app: backend-cursoJS
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
