yaml_dir/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-cursoJS
  labels:
    app.kubernetes.io/name: backend-cursoJS
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
    cert-manager.io/cluster-issuer: app-dns-production
spec:
  ingressClassName: nginx
  rules:
  - host: cursojs.nodeiot.app.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cursojs-backend
            port: 
              number: 3000
  tls:
  - hosts:
    - cursojs.nodeiot.app.br
    secretName: development-certificate
